--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-app",
-  "proxy": "http://localhost:8080",
+  "proxy": "http://ec2-3-70-127-40.eu-central-1.compute.amazonaws.com:8000/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
